Core/src/main/java/com/example/error/BaseErrorCode.java
package com.example.error;

import com.example.dto.ErrorReason;

public interface BaseErrorCode {
    public ErrorReason getErrorReason();
}